<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <FrameLayout
            android:id="@+id/mainframe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/frame"
                android:src="@drawable/frame_vip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".45" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".12"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/designation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:fontFamily="@font/budmo_jiggler"
                        android:gravity="center_horizontal"
                        android:letterSpacing=".05"
                        android:text="@string/designation"
                        android:textAllCaps="true"
                        android:textColor="#FEFEFE"
                        android:textSize="33sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".42"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:letterSpacing=".04"
                        android:fontFamily="@font/righteous_regular"
                        android:maxLines="1"
                        android:text="@string/name"
                        android:textColor="#2A6887"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/righteous_regular"
                        android:textColor="#2A6887"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/qr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/qr_code"
                        android:src="@drawable/ivc_m_1001" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:text="@string/save" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>